--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-redux-router",
+  "name": "react-bootstrap",
   "version": "1.0.0",
-  "description": "Basic skeleton codebase for React/Redux/Router applications.",
+  "description": "Basic skeleton codebase for React with Bootstrap applications.",
   "scripts": {
     "preinstall": "npm set audit false",
     "postinstall": "cp env.example.js env.js",
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:bottega-code-school/js-builder.git"
+    "url": "git+ssh://git@github.com/bottega-code-school/js-builder.git"
   },
   "keywords": [
     "es6",
@@ -62,13 +62,9 @@
     "postcss-loader": "^2.1.6",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-redux": "5.0.6",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.3.1",
-    "redux": "^3.7.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.21.0",
-    "webpack-cli": "^3.1.0",
+    "webpack-cli": "^3.1.1",
     "webpack-dev-middleware": "^3.1.3",
     "webpack-dev-server": "^3.1.5",
     "webpack-hot-middleware": "^2.22.3",
@@ -81,6 +77,7 @@
     "babel-register": "^6.26.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "uglifyjs-webpack-plugin": "^1.2.7",
-    "webpack": "^4.16.4"
-  }
+    "webpack": "^4.20.2"
+  },
+  "main": "env.example.js"
 }
